# Virtual-Avatar-Intelligent-Driving-System

./: .env.example  .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
configs/: app_config.json
docs/: four-person-development-plan.md  plan.md
scripts/poc/: funasr_streaming_validation.py  hf_emotion_checkpoint_test.py  live2d_poc.py  llm_validation.py  mediapipe_validation.py
src/virtual_avatar_system/: __init__.py
src/virtual_avatar_system/audio/: __init__.py  chinese_segmenter.py  funasr_streaming.py  live_speech_service.py  pipeline.py  sentence_accumulator.py  source.py  text_stabilizer.py  types.py
src/virtual_avatar_system/config/: app_config.py
src/virtual_avatar_system/controller/: __init__.py  avatar_controller.py
src/virtual_avatar_system/emotion/: __init__.py  classifier.py  types.py
src/virtual_avatar_system/llm/: __init__.py  semantic.py
src/virtual_avatar_system/renderer/: __init__.py  live2d_renderer.py
src/virtual_avatar_system/ui/: __init__.py  live_state_machine.py  main_window.py  preview_window.py  settings_page.py  system_tray.py
src/virtual_avatar_system/utils/: runtime_dependencies.py
src/virtual_avatar_system/vision/: __init__.py  camera_source.py  face_inference.py  feature_packet.py
